ajuste de estilo en detalle del producto

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -171,6 +171,17 @@ md-input-container
 /* ------ TEMP PRODUCT DETAIL STYLE ----- */
 .temp-product-detail, .md-dialog-content
   background-color #f6f6f6
+  .interest-you
+    padding-bottom 60px
+    .title-middle-line
+      padding 15px 15px 30px
+      h4 
+        font-size 20px
+    .owl-carousel .owl-item 
+      text-align center
+      img
+        width auto !important
+        margin 0 auto
   #product-detail 
     background-color white
     .wrapper 
