--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -89,6 +89,15 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .temp-product-detail 
+    .article-description
+      border-left none !important
+      
+    .article-content 
+      padding-top 0 !important
+    #product-detail .wip-image-zoom .main-image, .md-dialog-content #product-detail .wip-image-zoom .main-image
+      width 100% !important
+      height auto !important
   .box-simple .box-header .img-box
     height 120px
   .box-simple
