ajuste de estilo

--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -8,11 +8,11 @@
 primary = #03A9F4
 info = #00bcd4
 success = #00a650
-danger = #ff4b4b
+danger = #e72820
 warning = #ff9039
 default = #ddd
 dark = #777
-optional = #fa6b6b
+optional = #e72820
 
 /* variables */
 breadcrumbClr = white
