--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -5,7 +5,12 @@
 
 .header
   position initial
-
+.send-free-msj
+  background-color optional
+  padding 5px 0
+  p 
+    margin-bottom 0
+    color white
 /* Shopping cart */
 .shopping-cart
   position relative
