--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,3 +1,10 @@
+<div class="send-free-msj">
+    <div class="container">
+        <div class="text-center">
+            <p><strong>Envío gratis</strong> en compras mayores a $500 pesos.</p>
+        </div>
+    </div>
+</div>
 <div class="mobile-hidde">
     <div class="first-row">
         <div class="container">
