fix page and single style, add slug in blogctrl

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -221,7 +221,8 @@
   &:hover .text-caption
     display inline
 .box-bordered
-  border-bottom 1px solid #ddd
+  background-color white
+  border 1px solid #eee
   padding 15px
   a
     &:hover
@@ -514,7 +515,8 @@
   color #555
   float right
 .box-widget
-  widget(#f5f5f5, 2px, 15px, 1px solid #ddd, none)
+  widget(white, 2px, 15px, 1px solid #eee, none)
+  height 100%
   .dividerw
     border-color #ddd
   .widget-title
