--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -232,7 +232,15 @@ md-input-container
     color fontClr
   h4
     color fontClr
-
+.temp-pages 
+  background-color #f5f5f5
+  .wrapp 
+    background-color white  
+    padding-left 25px
+    padding-right 25px 
+    border 1px solid #eee 
+#temp-blog 
+  background-color #f5f5f5
 /* ------ TEMP ACTIVATE ACCOUNT STYLE ----- */
 .temp-validate-account
   padding 50px 0
