--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,13 +2,14 @@
     <section class="content-area">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-sm-8">
+                <div class="col-md-12">
                     <div class="title-middle-line">
                         <div class="text-content">
                             <h4 class="text-uppercase">Blog</h4>
                         </div>
-                        <hr>
                     </div>
+                </div>
+                <div class="col-md-8 col-sm-8">
                     <div class="content-pages">
                         <div class="row">
                             <div class="box-bordered col-sm-12 box-blog" ng-repeat="entry in Post.list">
