remove schema product

--- a/app/templates/partials/box-product.html
+++ b/app/templates/partials/box-product.html
@@ -1,4 +1,4 @@
-<div class="box-simple" itemscope itemtype="http://schema.org/Product">
+<div class="box-simple">
     <div class="box-header">
         <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
             <img class="img-box" src="{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}" alt="{{ product.name }}">
